[gd_scene load_steps=7 format=3 uid="uid://uou4ssvxdcly"]

[ext_resource type="Texture2D" uid="uid://cfli7gnceuyco" path="res://assets/astronout.png" id="2_36inc"]
[ext_resource type="Script" path="res://scenes/entity/astronot/astronot.gd" id="2_e6crm"]
[ext_resource type="AudioStream" uid="uid://e5rgtnkpg0yv" path="res://assets/Checkpoint-01.wav" id="3_ltiag"]
[ext_resource type="AudioStream" uid="uid://bk0132ub3veqx" path="res://assets/Thud01Aud.wav" id="4_tw8xo"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rctnw"]
bounce = 0.4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_evu6n"]
radius = 15.0
height = 72.0

[node name="Astronot" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_rctnw")
gravity_scale = 0.0
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("2_e6crm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_36inc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_evu6n")

[node name="OxygenTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="OutOfOxygenTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="OxygenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ltiag")
volume_db = 2.0

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tw8xo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="OxygenTimer" to="." method="_on_oxygen_timer_timeout"]
[connection signal="timeout" from="OutOfOxygenTimer" to="." method="_on_out_of_oxygen_timer_timeout"]
